welcome page added

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="zckhome.css" type="text/css">
 </head>
 <body>
-   
+   <!--NAVBAR HTML CODE OF ZAHIRA COLLEGE KALMUNAI [BY MOHAMED AHNAF]-->
 <nav>
     <div class="zck-logo">
         <h1>ZAHIRA COLLEGE KALMUNAI</h1>
     </div>
 
     <ul>
-       <li><a href="#">HOME</a></li>
+       <li><a href="index.html">HOME</a></li>
        <li><a href="#">ABOUT US</a></li>
        <li><a href="#">ACADEMICS</a></li>
        <li><a href="#">ACHIEVEMENTS</a></li>
@@ -29,6 +29,16 @@
     </div>
 </nav>
 
+<!--WELCOME SECTION ZAHIRA COLLEGE KALMUNAI [BY MOHAMED AHNAF]-->
+
+<div class="zck-welcome">
+    <div class="offi-logo">
+        <img src="WhatsApp Image 2024-09-26 at 12.07.05_31570a97.jpg" alt="Zahira college kalmunai logo" class="logo-pic">
+    </div>
+
+    <h1 title="SCHOOL MOTO">من جد وجد<br>"Man jadda wa jadda" <br>He who tries, will achieve </h1>
+    
+</div>
 
 
 
