highlight part started

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </nav>
 
 <!--WELCOME SECTION ZAHIRA COLLEGE KALMUNAI [BY MOHAMED AHNAF]-->
-
+<section id="sec-1">
 <div class="zck-welcome">
     <div class="offi-logo">
         <img src="WhatsApp Image 2024-09-26 at 12.07.05_31570a97.jpg" alt="Zahira college kalmunai logo" class="logo-pic">
@@ -39,6 +39,14 @@
     <h1 title="SCHOOL MOTO">من جد وجد<br>"Man jadda wa jadda" <br>He who tries, will achieve </h1>
     
 </div>
+</section>
+
+<div class="highlight-zck">
+    <div class="high-title"><h2>HIGHLIGHTS</h2><div class="hdline"></div></div>
+</div>
+
+
+
 
 
 
